<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <com.google.android.material.appbar.AppBarLayout
    android:id="@+id/appBarLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.appcompat.widget.Toolbar
      android:id="@+id/toolbar"
      android:layout_width="match_parent"
      android:layout_height="?attr/actionBarSize"
      android:background="@color/white"
      app:layout_scrollFlags="scroll|enterAlways"
      app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

      <ImageButton
        android:id="@+id/btnBackFav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_back"
        app:tint="@color/black" />

      <ImageButton
        android:id="@+id/btnDeleteAllFav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="@dimen/_10sdp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_delete"
        app:tint="@color/black" />

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_25sdp"
        android:text="@string/favorites"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.tabs.TabLayout
      android:id="@+id/tabLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:tabIndicatorFullWidth="false" />

  </com.google.android.material.appbar.AppBarLayout>

  <LinearLayout
    android:id="@+id/lytDelete"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:visibility="gone"
    android:animateLayoutChanges="true"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

    <CheckBox
      android:id="@+id/chbCheckAll"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/_10sdp"
      android:text="@string/select_all"
      android:minWidth="0dp"
      android:minHeight="0dp"
      android:layout_margin="@dimen/_20sdp"/>

    <View
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_weight="1"/>

    <com.google.android.material.button.MaterialButton
      android:id="@+id/btnDeleteSelectedItems"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/delete"
      app:cornerRadius="@dimen/_5sdp"
      style="@style/Widget.MaterialComponents.Button.OutlinedButton"
      android:layout_marginEnd="@dimen/_20sdp"/>

  </LinearLayout>

  <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/rv_favorites"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:layout_marginStart="@dimen/_20sdp"
    android:layout_marginEnd="@dimen/_20sdp"
    android:layout_marginBottom="@dimen/_20sdp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/lytDelete"
    tools:context=".ui.favorites.ToWatchFragment" />

  <com.github.ybq.android.spinkit.SpinKitView
    android:id="@+id/spin_kit_fav"
    style="@style/SpinKitView.FadingCircle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:SpinKit_Color="@color/colorPrimary"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/txt_error_fav"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/error"
    android:textColor="@color/colorHint"
    android:textSize="@dimen/_14ssp"
    android:visibility="gone"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>