<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  android:id="@+id/constraint_root"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <LinearLayout
    android:id="@+id/linear_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:animateLayoutChanges="true"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:context=".ui.main.view.HomeFragment">

    <TextView
      android:id="@+id/explore"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/_20sdp"
      android:text="@string/explore"
      android:textColor="@color/black"
      android:textSize="@dimen/_16ssp" />

    <TextView
      android:id="@+id/find_fav_movie"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/_20sdp"
      android:layout_marginTop="@dimen/_10sdp"
      android:text="@string/find_fav_movie"
      android:textColor="@color/colorHint"
      android:textSize="@dimen/_14ssp" />

    <LinearLayout
      android:id="@+id/linear_search_parent"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:orientation="horizontal">

      <androidx.cardview.widget.CardView
        android:id="@+id/card_search"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_weight="1"
        app:cardCornerRadius="@dimen/_15sdp"
        app:cardElevation="@dimen/_2sdp"
        app:contentPadding="@dimen/_5sdp">

        <LinearLayout
          android:id="@+id/linear_search_parent2"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="horizontal">

          <ImageButton
            android:id="@+id/btn_search"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:background="@android:color/transparent"
            android:scaleType="centerInside"
            android:src="@drawable/ic_search"
            app:tint="@color/colorHint" />

          <EditText
            android:id="@+id/edt_search"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_5sdp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:ems="10"
            android:gravity="center_vertical"
            android:hint="@string/search"
            android:inputType="textPersonName"
            android:textColor="@color/colorHint"
            android:textSize="@dimen/_12ssp" />

        </LinearLayout>
      </androidx.cardview.widget.CardView>

      <ImageButton
        android:id="@+id/btn_filter"
        android:layout_width="@dimen/_24sdp"
        android:layout_height="@dimen/_24sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@android:color/transparent"
        android:scaleType="centerInside"
        android:src="@drawable/ic_category"
        app:tint="@color/black" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/rvGenres"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:visibility="gone"
      android:layout_marginEnd="@dimen/_15sdp"
      android:layout_marginStart="@dimen/_15sdp"/>

    <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/rv_movies"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_marginEnd="@dimen/_10sdp"
      android:layout_marginStart="@dimen/_10sdp"
      android:layout_marginTop="@dimen/_10sdp"
      android:visibility="gone" />

  </LinearLayout>

  <com.github.ybq.android.spinkit.SpinKitView
    android:id="@+id/spin_kit"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    style="@style/SpinKitView.FadingCircle"
    app:SpinKit_Color="@color/colorPrimary"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent" />

  <TextView
    android:id="@+id/txt_error"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:visibility="gone"
    android:text="@string/error"
    android:textSize="@dimen/_14ssp"
    android:textColor="@color/colorHint"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>